test : 핵심 기능 및 예외 테스트 추가, 통과